samples/_failures_safe/1761128175_0b3479_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f61f9b95.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_f61f9b95.c:156:20: error: missing terminating " character
  156 |             printf("Invalid token
      |                    ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_f61f9b95.c:156:13: error: expected expression at end of input
  156 |             printf("Invalid token
      |             ^~~~~~
./samples/SAFE/__tmp_f61f9b95.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f61f9b95.c:156:13: error: expected declaration or statement at end of input
